Fixed overflow issue

--- a/src/styles/BottomNavigationBar/BottomNavigationBar.module.scss
+++ b/src/styles/BottomNavigationBar/BottomNavigationBar.module.scss
@@ -1,6 +1,9 @@
 @use "@/styles/partials/variables" as var;
 
 .navigationBar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
     display: flex;
     flex-shrink: 0;
     height: var.$BottomNavigationBar-height;
